# teamspeak-plugin-qt-common

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: connection_base.cpp  module.cpp  module_qt.cpp  plugin_base.cpp  plugin_helpers.cpp  talkers.cpp  translator.cpp  ts_context_menu_qt.cpp  ts_error.cpp  ts_functions.cpp  ts_helpers_qt.cpp  ts_infodata_qt.cpp  ts_logging_qt.cpp  ts_servergroups.cpp  ts_serverinfo_qt.cpp  ts_serversinfo.cpp  ts_settings_qt.cpp
core/core/: client_storage.h  connection_base.h  definitions.h  module.h  module_qt.h  plugin_base.h  plugin_helpers.h  talkers.h  translator.h  ts_context_menu_qt.h  ts_error.h  ts_functions.h  ts_helpers_qt.h  ts_infodata_qt.h  ts_logging_qt.h  ts_servergroups.h  ts_serverinfo_qt.h  ts_serversinfo.h  ts_settings_qt.h
volume/: dsp_volume.cpp  dsp_volume_agmu.cpp  dsp_volume_ducker.cpp  volumes.cpp
volume/volume/: db.h  dsp_helpers.h  dsp_volume.h  dsp_volume_agmu.h  dsp_volume_ducker.h  volumes.h
volume_widgets/: fader_vertical.cpp  fader_vertical.ui
volume_widgets/volume_widgets/: fader_vertical.h
